# dauntless-py

./: pyproject.toml
example/: open.py  webcam.py
src/dauntless/: __init__.py  decode.py  mask.py  oper.py  post.py  process.py  tags.py
